<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/result_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/result_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_panel"
        app:layout_constraintHeight_percent="0.4"/>


    <TextView
        android:id="@+id/label_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="@id/result_panel"
        app:layout_constraintStart_toStartOf="@id/result_panel"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.05"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/label_name"
        app:layout_constraintStart_toEndOf="@id/label_name"
        app:layout_constraintEnd_toEndOf="@id/result_panel"
        app:layout_constraintBottom_toBottomOf="@id/label_name"
        />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@id/label_name"
        app:layout_constraintStart_toStartOf="@id/result_panel"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.05"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/label_address"
        app:layout_constraintStart_toEndOf="@id/label_address"
        app:layout_constraintEnd_toEndOf="@id/result_panel"
        app:layout_constraintBottom_toBottomOf="@id/label_address"
        />

    <TextView
        android:id="@+id/label_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/id"
        app:layout_constraintTop_toBottomOf="@id/label_address"
        app:layout_constraintStart_toStartOf="@id/result_panel"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.05"
        />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/label_id"
        app:layout_constraintStart_toEndOf="@id/label_id"
        app:layout_constraintEnd_toEndOf="@id/result_panel"
        app:layout_constraintBottom_toBottomOf="@id/label_id"
        />

    <TextView
        android:id="@+id/label_latitude"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/latitude"
        app:layout_constraintTop_toBottomOf="@id/label_id"
        app:layout_constraintStart_toStartOf="@id/result_panel"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.05"
        />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/label_latitude"
        app:layout_constraintStart_toEndOf="@id/label_latitude"
        app:layout_constraintEnd_toEndOf="@id/result_panel"
        app:layout_constraintBottom_toBottomOf="@id/label_latitude"
        />

    <TextView
        android:id="@+id/label_longitude"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/longitude"
        app:layout_constraintTop_toBottomOf="@id/label_latitude"
        app:layout_constraintStart_toStartOf="@id/result_panel"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.05"
        />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/label_longitude"
        app:layout_constraintStart_toEndOf="@id/label_longitude"
        app:layout_constraintEnd_toEndOf="@id/result_panel"
        app:layout_constraintBottom_toBottomOf="@id/label_longitude"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="label_address,label_id,label_latitude,label_longitude,label_name,result_panel"/>
</merge>